@@ -10,10 +10,7 @@ Parameters
 ----------
 inputSample, outputSample : :class:`~openturns.Sample` or 2d-array
     The samples :math:`(\vect{x}_k)_{1 \leq k \leq N} \in \Rset^n` and :math:`(\vect{y}_k)_{1 \leq k \leq N}\in \Rset^d`.
-inputTransformation : :class:`~openturns.Function`
-    Function :math:`T` used to normalize the input sample.
 
-    If used, the meta model is built on the transformed data.
 basis : :class:`~openturns.Basis`
     Functional basis to estimate the trend: :math:`(\varphi_j)_{1 \leq j \leq n_1}: \Rset^n \rightarrow \Rset`. 
 
@@ -24,14 +21,15 @@ basisCollection : collection of :class:`~openturns.Basis`
     An empty collection means that no trend is estimated.
 covarianceModel : :class:`~openturns.CovarianceModel`
     Covariance model of the Gaussian process. See notes for the details.
+
 normalize : bool, optional
     Indicates whether the input sample has to be normalized.
-
-    OpenTURNS uses the transformation fixed by the User in *inputTransformation* or the empirical mean and variance of the input sample.
+    If True, input sample is centered & reduced.
     Default is set in resource map key `GeneralLinearModelAlgorithm-NormalizeData`
+
 keepCovariance : bool, optional
     Indicates whether the covariance matrix has to be stored in the result structure *GeneralLinearModelResult*.
-    Default is set in resource map key `GeneralLinearModelAlgorithm-KeepCovariance`
+    Default value is set in resource map key `GeneralLinearModelAlgorithm-KeepCovariance`
 
 Notes
 -----
@@ -169,7 +167,7 @@ It is also possible to proceed as follows:
 
 The behaviour of the reduction is controlled by the following keys in :class:`~openturns.ResourceMap`:
     - *ResourceMap.SetAsBool('GeneralLinearModelAlgorithm-UseAnalyticalAmplitudeEstimate', true)* to use the reduction associated to :math:`\sigma`. It has no effect if :math:`d>1` or if :math:`d=1` and :math:`\sigma` is not part of :math:`\vect{p}`
-    - *ResourceMap.SetAsBool('GeneralLinearModelAlgorithm-UnbiasedVariance', true)* allows to use the *unbiased* estimate of :math:`sigma` where :math:`\dfrac{1}{N}` is replaced by :math:`\dfrac{1}{N-p}` in the optimality condition for :math:`\sigma`.
+    - *ResourceMap.SetAsBool('GeneralLinearModelAlgorithm-UnbiasedVariance', true)* allows to use the *unbiased* estimate of :math:`\sigma` where :math:`\dfrac{1}{N}` is replaced by :math:`\dfrac{1}{N-p}` in the optimality condition for :math:`\sigma`.
 
 With huge samples, the `hierarchical matrix <http://en.wikipedia.org/wiki/Hierarchical_matrix>`_  implementation could be used if OpenTURNS had been compiled with `hmat-oss` support.
 
