@@ -20,11 +20,11 @@ basis : :class:`~openturns.Basis`
     If :math:`p>1`, the same basis is used for each marginal output.
 basisCollection : sequence of :class:`~openturns.Basis`
     Collection of :math:`p` functional basis: one basis for each marginal output: :math:`\left[(\varphi_j^1)_{1 \leq j \leq n_1}, \dots, (\varphi_j^p)_{1 \leq j \leq n_p}\right]`. If the sequence is empty, no trend coefficient is estimated (simple kriging).
+
 normalize : bool, optional
     Indicates whether the input sample has to be normalized.
 
-    The transformation used is fixed by the User in *inputTransformation* or the empirical mean and variance of the input sample.
-    Default is set in resource map key `GeneralLinearModelAlgorithm-NormalizeData`
+    Default value is True. It implies working on centered & reduced input sample.
 
 Notes
 -----
