@@ -67,6 +67,7 @@
  * #1057 (FittingTest.BestModelBIC to return bic value)
  * #1064 (The summary of a FunctionalChaosSobolIndices fails with more than 14 dimensions)
  * #1071 (Event cannot be created from a RandomVector)
+ * #1078 (KrigingAlgorithm documentation still references "inputTransformation")
  * #1090 (PythonFunction can make OT crash)
  * #1092 (The parameterGradient of a ParametricFunction can loss accuracy)
 
